introdução à programação para web

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-     hdhwhwghwdgbfwdwd
-</body>
+  <head> </head>
+  <body>
+    <h1>Introdução à Programção para Web</h1>
+    <ul>
+      <li><a href="./ex01/">Exercício 01 - Olá Turma</a></li>
+    </ul>
+  </body>
 </html>
