--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Introdução à Programação para Web (2024.1)</h1>
     <ul>
-      <li><a href="./ex01/">Exercício 01 - Olá Turma</a></li>
+      <li><a href="./Exemplo 02/">Exemplo 02</a></li>
     </ul>
   </body>
 </html>
