correção com o subtítulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <head> </head>
   <body>
     <h1>Introdução à Programação para Web (2024.1)</h1>
+    <h2>Subtítulo</h2>
     <ul>
+      <li><a href="./Exemplo 01/">Exemplo 01</a></li>
       <li><a href="./Exemplo 02/">Exemplo 02</a></li>
     </ul>
   </body>
