--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <h1>Introdução à Programação para Web (2024.1)</h1>
     <h2>Subtítulo</h2>
+    <p>Exemplos de uso dos códigos</p>
     <ul>
       <li><a href="./Exemplo 01/">Exemplo 01</a></li>
       <li><a href="./Exemplo 02/">Exemplo 02</a></li>
