--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <h2>Subtítulo</h2>
     <p>Exemplos de uso dos códigos</p>
     <ul>
-      <li><a href="./Exemplo 01/">Exemplo 01</a></li>
-      <li><a href="./Exemplo 02/">Exemplo 02</a></li>
+      <hr>
+      <li><a href="./Exemplo 01/"target = _blank>Exemplo 01</a></li>
+      <li><a href="./Exemplo 02/"target = _blank>Exemplo 02</a></li>
     </ul>
   </body>
 </html>
